CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(extract)

INCLUDE(FcpptCMakeUtils)

# FIND BOOST
FIND_PACKAGE(
	Boost 1.41.0 COMPONENTS
	program_options
	system
)

INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# FIND FCPPT
FIND_PACKAGE(Fcppt REQUIRED)

INCLUDE_DIRECTORIES(${FCPPT_INCLUDE_DIRS})

FILE(GLOB basefiles *.cpp)

FILE(
	GLOB_RECURSE collectionsfiles
	process/*.cpp
	plugins/*.cpp
)

ADD_EXECUTABLE(extract ${basefiles} ${collectionsfiles})

TARGET_LINK_LIBRARIES(
	extract
	${FCPPT_LIBRARIES}
)

IF(NOT MSVC)
	TARGET_LINK_LIBRARIES(extract ${Boost_LIBRARIES})
ENDIF()

INSTALL(TARGETS extract DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
