CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(extract)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

INCLUDE(FcpptCMakeUtils)

# FIND BOOST
FIND_PACKAGE(
	Boost 1.45.0 REQUIRED
	program_options
	system
)

INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# FIND FCPPT
FIND_PACKAGE(Fcppt REQUIRED)

INCLUDE_DIRECTORIES(${Fcppt_INCLUDE_DIRS})

FILE(GLOB basefiles *.cpp)

FILE(
	GLOB_RECURSE collectionsfiles
	process/*.cpp
	plugins/*.cpp
)

ADD_EXECUTABLE(extract ${basefiles} ${collectionsfiles})

TARGET_LINK_LIBRARIES(
	extract
	${Fcppt_LIBRARIES}
)

IF(NOT MSVC)
	TARGET_LINK_LIBRARIES(extract ${Boost_LIBRARIES})
ENDIF()

INSTALL(TARGETS extract DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
